After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 637246 - [Patch] gjs fails to build with recent xulrunner2 (JS_GetFunctionName)
[Patch] gjs fails to build with recent xulrunner2 (JS_GetFunctionName)
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other Linux
: Normal blocker
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2010-12-14 17:54 UTC by Marc-Antoine Perennou
Modified: 2010-12-15 22:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Adapt to JS_GetFunctionName removal (5.08 KB, patch)
2010-12-14 17:54 UTC, Marc-Antoine Perennou
reviewed Details | Review
Adapt to JS_GetFunctionName removal (5.10 KB, patch)
2010-12-15 17:34 UTC, Marc-Antoine Perennou
committed Details | Review

Description Marc-Antoine Perennou 2010-12-14 17:54:36 UTC
Created attachment 176420 [details] [review]
Adapt to JS_GetFunctionName removal

JS_GetFunctionName has been removed in xulrunner2 in this commit:
http://hg.mozilla.org/mozilla-central/changeset/e35b70ffed69

First try to adapt to that change
Comment 1 Colin Walters 2010-12-15 17:29:58 UTC
Review of attachment 176420 [details] [review]:

::: gjs/profiler.c
@@ +196,3 @@
+    return function;
+
+ out:

If it's an error path, call it "error".

@@ +200,1 @@
     return function;

and just "return NULL", since you know at this point function is NULL anyways.
Comment 2 Marc-Antoine Perennou 2010-12-15 17:34:14 UTC
Created attachment 176485 [details] [review]
Adapt to JS_GetFunctionName removal

Oh, yeah, leftover of before I passed the ownership.
Done
Comment 3 Colin Walters 2010-12-15 22:20:28 UTC
Great, thanks for the patch!