xulrunner2: Conditionnaly adapt to JS_GetFunctionName removal

Upstream removed JS_GetFunctionName in commit:
http://hg.mozilla.org/mozilla-central/changeset/e35b70ffed69

We now have to use JS_GetFunctionId which returns a JSString*
instead of a const char*

https://bugzilla.gnome.org/show_bug.cgi?id=637246